<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main"
    tools:context=".QuizFragment">

    <TextView
        android:id="@+id/question"
        android:layout_width="368dp"
        android:layout_height="68dp"
        android:background="@drawable/zaokraglenie"
        android:fontFamily="@font/crimson_text_bold"
        android:gravity="center"
        android:text="@string/pytanie"
        android:textColor="@color/black"
        android:textSize="29sp"
        app:layout_constraintBottom_toTopOf="@+id/ivImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.316" />

    <ImageView
        android:id="@+id/ivImage"
        android:layout_width="353dp"
        android:layout_height="305dp"
        android:contentDescription="@string/zdjecie"
        android:scaleType="centerCrop"
        android:src="@drawable/bin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.345" />

    <Button
        android:id="@+id/btnAnswer1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/btn"
        android:fontFamily="@font/crimson_text_semibold"
        android:text="@string/odp1"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tvPoints"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivImage"
        app:layout_constraintVertical_bias="0.07" />

    <Button
        android:id="@+id/btnAnswer2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/btn"
        android:fontFamily="@font/crimson_text_semibold"
        android:text="@string/odp2"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tvPoints"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAnswer1"
        app:layout_constraintVertical_bias="0.062" />

    <TextView
        android:id="@+id/tvPoints"
        android:layout_width="247dp"
        android:layout_height="97dp"
        android:layout_marginTop="164dp"
        android:background="@drawable/zaokraglenie"
        android:fontFamily="@font/crimson_text_regular"
        android:gravity="center"
        android:text="@string/punkty_n0_10"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivImage" />

</androidx.constraintlayout.widget.ConstraintLayout>