<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main"
    tools:context=".AddAccountFragment">

    <TextView
        android:id="@+id/addPlayer"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/dodaj_gracza"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:gravity="center"
        android:fontFamily="@font/crimson_text_bold"
        android:paddingVertical="10dp"
        android:background="@drawable/zaokraglenie"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp" />
    
    <EditText
        android:id="@+id/etName"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/imi"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addPlayer"
        android:layout_marginTop="100dp"/>

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/btn"
        android:fontFamily="@font/crimson_text_bold"
        android:text="@string/dodaj"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:layout_margin="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etName"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButtonBackToAccounts"
        android:layout_margin="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:src="@drawable/baseline_arrow_back_ios_new_24"
        app:tint="@color/black"
        app:maxImageSize="40dp"
        android:backgroundTint="@color/btn"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>